# rust-study

./: .gitignore
closures/src/: main.rs
hello_cargo/src/: main.rs  test_array.rs  test_error.rs  test_error2.rs  test_error3.rs  test_generic1.rs  test_generic2.rs  test_generic3.rs  test_hashmap.rs  test_lifetime_struct.rs  test_struct-reactangle.rs  test_struct.rs  test_struct_onwnship.rs  test_struct_onwnship1.rs  test_trait.rs  test_vector.rs
lrs/: Cargo.toml
minigrep/: poem.txt
practice-01-concurrency-channel/: Cargo.toml
practice02-share-memory/: Cargo.toml
project01-memmory-pool-02/: Cargo.toml
project01-memort-pool/: Cargo.toml
project02-lock-free-counter/: Cargo.toml
project03-lrs/: Cargo.toml
project04-webserver-single/: Cargo.toml
stock/: .dockerignore  Cargo.toml  Dockerfile  stock.service
stock-monitor/: Cargo.toml  stock-monitor.json
stock-monitor/src/: config.rs  main.rs  stock.rs
stock/.cargo/: config.toml
stock/data/commodities/corn/: prices.json
stock/data/commodities/live_pig/: prices.json
stock/data/commodities/soybean_meal/: prices.json
stock/docs/: DEPLOY.md  TECHNICAL_DESIGN.md
stock/src/: config.rs  main.rs  scheduler.rs
stock/src/analysis/: trend.rs
stock/src/handlers/: api.rs  commodity_detail.rs  dashboard.rs  mod.rs
stock/src/models/: commodity.rs
stock/src/scrapers/: mod.rs  ppi.rs  zhujia.rs
stock/src/storage/: json_store.rs  mod.rs
stock/static/css/: custom.css
stock/templates/: base.html  commodity_detail.html  dashboard.html
stock/templates/partials/: price_table.html  trend_badge.html
(+11 files in other folders)
