[package]
name = "stock"
version = "0.1.0"
 edition = "2021"

 [dependencies]
 tokio = { version = "1", features = ["full"] }
 axum = "0.8"
 tera = "1"
 reqwest = { version = "0.12", features = ["json"] }
 scraper = "0.22"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 async-trait = "0.1"
 chrono = { version = "0.4", features = ["serde"] }
 anyhow = "1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 tower-http = { version = "0.6", features = ["fs"] }
